fix: image alignment

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ textarea:hover {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    justify-content: center;
+    align-items: center;
     display: flex;
 
 
